# CEA

./: .flake8  .gitignore  2  Makefile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
cli/: __main__.py
examples/: basic.py  complex.py  crispr_sort.py
lib/: actual_math.py  math.py
src/cea/: attempt2_formal.py  bkp.py  core.py  derivation.py  dsl.py  example_lib.py  formal.py  framework.py  library.py  math.py  old_formal.py  souffle.py  stdbiolib.py  util.py
src/cea/shared/: ir.py  sexp.py
test/: test_math.py
tests/: test_math.py
tests/shared/: test_sexp.py  test_sexp.py.bak
