[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cea"
version = "0.0.1"
authors = [
  { name="Justin Lubin", email="justin@jlubin.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/justinlubin/cea"
"Bug Tracker" = "https://github.com/justinlubin/cea/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
